--- a/common.css
+++ b/common.css
@@ -18,22 +18,43 @@ a {
 }
 
 #contact {
-	margin-left: 3em;
-	margin-top: 3em;
+	margin: 3em;
+	float: left;
+}
+
+#gallery {
+	margin: 3em 3em 3em 0;
+	float: right;
+}
+
+#gallery div {
+	text-align: center;
+}
+
+#offer {
+	margin: 0 3em;
+}
+
+#secondGallery {
+	margin: 3em 3em 0;
 }
 
 h1 {
 	margin: 0;
 	padding: 0;
 	display: block;
-	width: 100%;
-	height: 129px; /* TODO: rwd */
-	background-image: url("imgs/head.jpg");
-	background-size: contain;
-	background-repeat: no-repeat;
 }
 
-h1 span {
-	display: none;
+h1 img {
+	width: 100%;
+	height: auto;
+}
+
+.clearfix:before, .clearfix:after {
+	content:"";
+	display: table;
+}
+.clearfix:after {
+	clear: both;
 }
 
